<resources>
    <string name="app_name">EggTimer</string>
    <string name="SoftBoil">Blødkogt</string>
    <string name="SmilingBoil">Smilende</string>
    <string name="HardBoil">Hårdkogt</string>
    <string name="StartButton">Start</string>
    <string name="TimerLabel">Tid tilbage</string>
    <string name="TimerText">0:00</string>
    <string name="ChooseText">Vælg dit æg</string>
</resources>
